src/objects/gcal__GBL_Google_Calendar_Sync__mdt.object
<CustomObject>
    <fields>
        <fullName>gcal__GBL_Base_Url__c</fullName>
        <label>Base_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Google_Oauth2_Url__c</fullName>
        <label>Google Oauth2 Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Mail_Domain_Alias__c</fullName>
        <description>Domain for replacement in case it is not possible to use the real mail of the users, if blank the user real mail will be used.</description>
        <label>Mail Domain Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Mail_Domain__c</fullName>
        <inlineHelpText>Mail domain for synchronization</inlineHelpText>
        <label>Mail Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Pkcs8_Key__c</fullName>
        <label>Pkcs8 Key</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Polling_Frequency__c</fullName>
        <inlineHelpText>Polling Frequency in minutes</inlineHelpText>
        <label>Polling Frequency</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Service_User_Email__c</fullName>
        <label>Service User Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcal__GBL_Session_Duration__c</fullName>
        <description>Session Duration in Hours</description>
        <inlineHelpText>Session Duration in Hours</inlineHelpText>
        <label>Session Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Google Calendar Sync</label>
    <pluralLabel>Google Calendar Syncs</pluralLabel>
</CustomObject>